Migrate integration tests to separate source set
Established an `integrationTest` source set in both `:enforcer` and
`:profiler` modules. Moved existing integration tests from `src/test`
to `src/integrationTest` and configured the build to run these as a
distinct task in the `check` lifecycle.

Signed-off-by: Leanid Piliptsevich <pilleo19@gmail.com>